# ObserveAI_TakeHome_Asses

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
api/: main.py
api/models/: caller.py  interaction.py  tool_call.py  webhook.py
api/routers/: lookup.py  webhook.py
api/services/: airtable.py  analysis.py  email_alert.py  langfuse_client.py  qa_scorer.py
api/utils/: auth.py  phone.py  prompts.py
docs/: ARCHITECTURE.md  TECHNICAL_WRITEUP.md
docs/knowledge_base/: about_company.md  claims_process.md  customer_service.md  policies_and_coverage.md
prompts/: agent_system_prompt.txt  analysis_prompt.txt  qa_rubric_prompt.txt
scripts/: inspect_call.py  seed_airtable.py  setup_airtable_schema.py  vapi_sync.py
tests/: conftest.py  test_airtable_service.py  test_analysis.py  test_auth.py  test_email_alert.py  test_langfuse_client.py  test_lookup_router.py  test_main.py  test_models.py  test_phone.py  test_qa_scorer.py  test_vapi_sync.py  test_webhook_router.py
