[project]
name = "observe-claims-agent"
version = "0.1.0"
description = "Inbound voice AI agent for insurance claim status with post-call intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "httpx==0.27.0",
    "openai==1.40.0",
    "langfuse==3.0.0",
    "pydantic==2.8.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "respx==0.21.1",
    "ruff==0.6.2",
]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
